added styles base game

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<main id="container">
-  <div id="screen">
+<main class="container-game">
+  <div class="container-game__screen">
     <router-outlet />
   </div>
+  <p class="italic">Juego Tres en Raya</p>
   <app-buttons-box />
 </main>
