--- a/src/app/components/buttons-box/buttons-box.component.html
+++ b/src/app/components/buttons-box/buttons-box.component.html
@@ -1,1 +1,26 @@
-<p>buttons-box works!</p>
+<div class="flex-column container">
+  <div id="buttons-container" class="flex-apart">
+    <div class="d-pad-container">
+      <div></div>
+      <div></div>
+    </div>
+    <div class="x-o-container">
+      <div class="x-o-border-container flex-apart">
+        <div class="round-button"><span class="round-button__pressed">X</span></div>
+        <div class="round-button"><span class="round-button__pressed">O</span></div>
+      </div>
+    </div>
+  </div>
+  <div class="buttons-start-container">
+    <div class="long-button"><span class="long-button__pressed">SELECT</span></div>
+    <div class="long-button"><span class="long-button__pressed">START</span></div>
+  </div>
+  <div class="speaker-container">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+</div>
