added biome and methods room

--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,2 +1,4 @@
 <p>{{userService.name()}}</p>
-<p>caca</p>
+<button (click)="searchPublicRoom()">Play Online</button>
+<a [routerLink]="['/jugar-privada']">Crear sala privada</a>
+<a [routerLink]="['/change-name']">Cambiar nombre</a>
