--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,4 +1,4 @@
 <p>{{userService.name()}}</p>
 <button (click)="searchPublicRoom()">Play Online</button>
-<a [routerLink]="['/jugar-privada']">Crear sala privada</a>
+<a [routerLink]="['/play-private']">Crear sala privada</a>
 <a [routerLink]="['/change-name']">Cambiar nombre</a>
