refactored room service

--- a/src/app/components/details-game/details-game.component.html
+++ b/src/app/components/details-game/details-game.component.html
@@ -1,2 +1,3 @@
-<p>Jugador 1 {{roomService.player1}}</p>
-<p>Jugador 2 {{roomService.player2}}</p>
+<p>Jugador 1 {{roomService.player1()}}</p>
+<p>Jugador 2 {{roomService.player2()}}</p>
+<p>Estado Juego {{roomService.stateGame()}}</p>
