--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,7 +1,7 @@
 @for (item of buttonGrid; track $index; let idx = $index) {
 <div>
   @for (square of item; track $index;let idx=$index) {
-  <button (click)="play(square)">{{square+1}}</button>
+  <button (click)="play(square)" [disabled]="!isMyTurn()">{{square+1}}</button>
   }
 </div>
 }
