--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,42 +1,36 @@
 @use "./../../public/colors.scss";
+@use "./scss/_functions.scss" as f;
 
-$border-radius-base: 15px;
-$padding-console: 15px;
+$border-radius-base: 13px;
+$padding-console: 13px;
 
 .container-game {
   background-color: colors.$accent-1;
   max-width: 30rem;
-  border-radius: 40px;
-  padding: calc($border-radius-base + $padding-console);
-  height: 98svh;
+  border-radius: f.px-to-em(40px);
+  padding: f.px-to-em($border-radius-base + $padding-console);
+  height: 100svh;
   display: grid;
+  position: relative;
   grid-template-rows: 1fr auto 42%;
 }
 
 .container-game__screen {
   background-color: colors.$background;
-  border-radius: $border-radius-base;
-  outline: 1rem solid colors.$primary;
-  outline-offset: -1rem;
+  border-radius: f.px-to-rem($border-radius-base);
+  outline: f.px-to-rem(16px) solid colors.$primary;
+  outline-offset: f.px-to-rem(-16px);
   position: relative;
-  padding: 1em 2em;
+  padding: f.px-to-em(16px) f.px-to-em(32px);
   overflow: hidden;
 }
 
 p {
-  margin-block: 10px;
+  margin-block: f.px-to-rem(10px);
   font-weight: bold;
 }
 
-// @media (width <=600px) {
-//   body {
-//     margin: 0;
-//   }
 
-//   .container-game {
-//     max-width: 100%;
-//   }
-// }
 
 // @media (height <=900px) {
 //   body {
