added new styles board and game

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,9 +1,12 @@
-@for (row of boardChunks(); track $index; let rowIndex = $index) {
-<div>
-  @for (cell of row; track $index; let cellIndex = $index) {
-  <button (click)="play(cell.id)" [disabled]="!isMyTurn()">
-    {{ cell.value }}
-  </button>
+<div class="board">
+  @for (row of boardChunks(); track $index; let rowIndex = $index) {
+  <div class="board__row">
+    @for (cell of row; track $index; let cellIndex = $index) {
+    <button (click)="play(cell.id)" [disabled]="!isMyTurn()" [ngClass]="getCellClasses(rowIndex, cellIndex)"
+      [attr.color-main]="roomService.board()[rowIndex * row.length+ cellIndex]===roomService.numberPlayer()">
+      <span class="board__text">{{ getMark(cell.value) }}</span>
+    </button>
+    }
+  </div>
   }
 </div>
-}
