--- a/src/app/components/details-game/details-game.component.html
+++ b/src/app/components/details-game/details-game.component.html
@@ -1,9 +1,37 @@
-<p>Jugador 1 {{roomService.player1().name}}</p>
-@for(vida of healthPlayer1(); track $index){
-❤️
-}
-<p>Jugador 2 {{roomService.player2().name}}</p>
-@for(vida of healthPlayer2(); track $index){
-❤️
-}
-<p>Estado Juego {{roomService.stateGame()}}</p>
+<section class="game">
+  <div class="game__player">
+    <div class="game__top">
+      <span class="game__health">
+        @for(vida of healthPlayer1(); track $index){❤️}
+      </span>
+      <span class="game__mark" [ngClass]="{ active: roomService.stateGame() === 'TURNO_JUGADOR1' }">X</span>
+    </div>
+    <p class="game__paragraph">{{ roomService.player1().name }}</p>
+  </div>
+  <div class="game__player">
+    <div class="game__top game__top--right">
+      <span class="game__mark" [ngClass]="{ active: roomService.stateGame() === 'TURNO_JUGADOR2' }">O</span>
+      <span class="game__health">
+        @if (!roomService.player2().name) {
+        <span class="game__health">💙💙💙</span>
+        } @if(roomService.player2().name){ @for(vida of healthPlayer2(); track
+        $index){💙} }
+      </span>
+    </div>
+    <p class="game__paragraph game__paragraph--right">
+      {{ roomService.player2().name || "Esperando..." }}
+    </p>
+  </div>
+  @if(roomService.stateGame() === 'TURNO_JUGADOR1' || roomService.stateGame()===
+  'TURNO_JUGADOR2'){
+  <p class="state-playing">
+    <span class="state-playing__line">Turno de</span>
+    <span class="state-playing__line">{{
+      roomService.stateGame() === "TURNO_JUGADOR1"
+      ? roomService.player1().name
+      : roomService.player2().name
+      }}</span>
+  </p>
+  }
+
+</section>
