--- a/src/app/page/home/home.component.scss
+++ b/src/app/page/home/home.component.scss
@@ -27,6 +27,7 @@
   font-style: italic;
   text-align: center;
   letter-spacing: -3px;
+  user-select: none;
 
   &-separator {
     display: inline-flex;
