--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,16 +12,15 @@ $padding-console: 13px;
   height: 100svh;
   display: grid;
   position: relative;
-  grid-template-rows: 1fr auto 42%;
+  grid-template-rows: 1fr auto 32%;
 }
 
 .container-game__screen {
   background-color: colors.$background;
   border-radius: f.px-to-rem($border-radius-base);
-  outline: f.px-to-rem(16px) solid colors.$primary;
-  outline-offset: f.px-to-rem(-16px);
+  border: f.px-to-rem(16px) solid colors.$primary;
   position: relative;
-  padding: f.px-to-em(16px) f.px-to-em(32px);
+  padding: f.px-to-em(12px) f.px-to-em(24px);
   overflow: hidden;
 }
 
