--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -1,4 +1,51 @@
-button {
-  aspect-ratio: 1;
-  width: 50px;
+@use "../../scss/colors.scss";
+@use "../../scss/functions" as f;
+$borde: 2px solid colors.$primary;
+
+.board {
+  height: 100%;
+  display: grid;
+  align-items: center;
+  grid-template-rows: repeat(3, 1fr);
+
+  &__row {
+    flex-grow: 1;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+  }
+
+  &__text {
+    color: inherit;
+  }
+
+  &__cell {
+    height: 100%;
+    aspect-ratio: 1/1;
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    padding: 0;
+    font-size: 300%;
+
+    &:not(:disabled) {
+      cursor: pointer;
+    }
+
+    &:nth-of-type(2n) {
+      border-inline: $borde;
+    }
+
+    @for $i from 1 through 6 {
+      &--#{$i} {
+        border-block-end: $borde;
+      }
+    }
+
+
+  }
+}
+
+[color-main=true] {
+  color: colors.$accent-2;
 }
