--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,5 +1,5 @@
 @if (type==='button') {
-<button class='shared-button' onclick='clickHandler ? clickHandler() : null'>
+<button class='shared-button' (click)="onButtonPressed()" [disabled]="disabled">
   {{ label }}
 </button>
 } @else{
