added component button modal full screen

--- a/src/app/components/modal-fullscreen/modal-fullscreen.component.html
+++ b/src/app/components/modal-fullscreen/modal-fullscreen.component.html
@@ -1,19 +1,16 @@
 @if(isModalVisible){
 <div class="modal-background" @fadeInOut></div>
 <div class="container" @animateChildren>
-  <h2 @slideInFromRight class="container__title">{{ textTitle() }}</h2>
-  <div @slideInFromRight1>
+  <h2 @slideInFromRight class="container__title">
+    <span class="container__text">{{ textTitle() }}</span>
     @if(roomService.stateGame()==='ESPERANDO_COMPAÑERO'){
-    <div class="dots-container">
-      @for (dot of dots; track $index ) {
-      <div class="dot"></div>
-      }
-    </div>
+    <div class="loader"></div>
     }
+  </h2>
+  <div @slideInFromRight1>
     @if(buttonTitle()!==null){
-    <button class="button" (click)="newTurn()">Nueva partida</button>
+    <app-button label="Nueva partida" type="button" (onClick)="newTurn()" />
     }
-    <a [routerLink]="['/']" class="boton">Volver al inicio</a>
   </div>
   <div @slideInFromRight2>
     <ng-content select="[pie]"></ng-content>
