--- a/src/app/components/modal-fullscreen/modal-fullscreen.component.scss
+++ b/src/app/components/modal-fullscreen/modal-fullscreen.component.scss
@@ -1,7 +1,9 @@
+@use "../../scss/colors.scss";
+@use "../../scss/functions" as f;
+
 @mixin flex-center {
-  display: flex;
+  display: inline-flex;
   align-items: center;
-  justify-content: center;
 }
 
 @mixin grid-center {
@@ -9,70 +11,44 @@
   place-items: center;
   place-content: center;
 }
+
 .modal-background {
   position: absolute;
   inset: 0;
   background-color: rgba(255, 255, 255, 0.7);
+  backdrop-filter: blur(2.5px) saturate(1.5);
 }
 
 .container {
   position: absolute;
   inset: 0;
   @include grid-center;
-  gap: 0.5em;
 
   &__title {
     text-align: center;
     max-width: 22ch;
+    font-size: f.px-to-rem(42px);
+    font-style: italic;
+    text-transform: uppercase;
+  }
+
+  &__text {
+    display: inline
   }
 }
 
-.dots-container {
-  @include flex-center;
-  height: 100%;
-  width: 100%;
+.loader {
+  width: 55px;
+  display: inline-block;
+  aspect-ratio: 4;
+  margin-inline-start: 0.2rem;
+  background: radial-gradient(circle closest-side, colors.$primary 90%, #0000) 0 / calc(100% / 3) 100% space;
+  clip-path: inset(0 100% 0 0);
+  animation: l1 1s steps(4) infinite;
 }
 
-.dot {
-  width: 1rem;
-  aspect-ratio: 1/1;
-  margin-right: 10px;
-  border-radius: 0.5em;
-  animation: pulse 1.5s infinite ease-in-out;
-}
-
-.dot:last-child {
-  margin-right: 0;
-}
-
-.dot:nth-child(1) {
-  animation-delay: -0.3s;
-}
-
-.dot:nth-child(2) {
-  animation-delay: -0.1s;
-}
-
-.dot:nth-child(3) {
-  animation-delay: 0.1s;
-}
-
-@keyframes pulse {
-  0% {
-    transform: scale(0.8);
-    background-color: #b3d4fc;
-    box-shadow: 0 0 0 0 rgba(178, 212, 252, 0.7);
-  }
-
-  50% {
-    transform: scale(1.2);
-    background-color: #6793fb;
-    box-shadow: 0 0 0 10px rgba(178, 212, 252, 0);
-  }
-
-  100% {
-    transform: scale(0.8);
-    background-color: #b3d4fc;
-    box-shadow: 0 0 0 0 rgba(178, 212, 252, 0.7);
+@keyframes l1 {
+  to {
+    clip-path: inset(0 -35% 0 0);
   }
 }
