fixed several styles responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<main class="container-game">
-  <div class="container-game__screen">
+<main class="main-game">
+  <div class="main-game__screen">
     <router-outlet />
   </div>
-  <p class="italic">Juego Tres en Raya</p>
+  <p class="main-game__paragraph">Juego Tres en Raya</p>
   <app-buttons-box />
 </main>
