--- a/src/app/components/buttons-box/buttons-box.component.html
+++ b/src/app/components/buttons-box/buttons-box.component.html
@@ -1,5 +1,5 @@
-<div class="flex-column container">
-  <div id="buttons-container" class="flex-apart">
+<div class="main-pad">
+  <div class="flex-apart">
     <div class="d-pad-container">
       <div></div>
       <div></div>
