--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
 $border-radius-base: 13px;
 $padding-console: 13px;
 
-.container-game {
+.main-game {
   background-color: colors.$accent-1;
   max-width: 30rem;
   border-radius: f.px-to-em(40px);
@@ -13,40 +13,29 @@ $padding-console: 13px;
   display: grid;
   position: relative;
   grid-template-rows: 1fr auto 32%;
+  container-type: inline-size;
+
+  &__screen {
+    background-color: colors.$background;
+    border-radius: f.px-to-rem($border-radius-base);
+    border: f.px-to-rem(16px) solid colors.$primary;
+    position: relative;
+    padding: f.px-to-em(12px) f.px-to-em(24px);
+    overflow: hidden;
+  }
+
+  &__paragraph {
+    margin-block: f.px-to-rem(10px);
+    font-weight: bold;
+    font-style: italic;
+  }
+
+  @media(height<=40em) {
+    & {
+
+      grid-template-rows: 1fr auto;
+    }
+
+  }
+
 }
-
-.container-game__screen {
-  background-color: colors.$background;
-  border-radius: f.px-to-rem($border-radius-base);
-  border: f.px-to-rem(16px) solid colors.$primary;
-  position: relative;
-  padding: f.px-to-em(12px) f.px-to-em(24px);
-  overflow: hidden;
-}
-
-p {
-  margin-block: f.px-to-rem(10px);
-  font-weight: bold;
-}
-
-
-
-// @media (height <=900px) {
-//   body {
-//     margin: 0;
-//   }
-
-//   app-buttons {
-//     display: none;
-//   }
-
-//   .container-game__screen {
-//     height: 100svh;
-//     box-sizing: border-box;
-//     border-radius: 0;
-//   }
-
-//   .container-game__screen {
-//     height: 87svh;
-//   }
-// }
