--- a/src/app/components/modal-fullscreen/modal-fullscreen.component.scss
+++ b/src/app/components/modal-fullscreen/modal-fullscreen.component.scss
@@ -28,16 +28,18 @@
 
   &__title {
     text-align: center;
-    max-width: 22ch;
+    max-width: 16ch;
     font-size: f.px-to-rem(42px);
     font-style: italic;
+    letter-spacing: -1.5px;
     position: relative;
     text-transform: uppercase;
   }
 
   &__buttons {
     display: grid;
-    gap: 0.5rem
+    gap: 0.5rem;
+    z-index: 200;
   }
 
   &__text {
